# cargo-foreach.rs

./: Cargo.toml
src/: main.rs
