[package]
name = "cargo-foreach"
version = "1.0.2"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Run a command in all cargo projects in the current directory"
repository = "https://git.dragonma.us/dragonmaus/cargo-foreach.rs"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
getopt = "1"
program = { git = "https://git.dragonma.us/dragonmaus/program.rs", version = "2" }
