[package]
name = "cargo-foreach"
version = "1.0.2"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2021"
description = "Run a command in all cargo projects in the current directory"
repository = "https://git.dragonma.us/rust/cargo-foreach"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
getopt = "1"

[dependencies.program]
git = "git://git.dragonma.us/rust/program"
